--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ body {
 }
 .container {
   margin: 0 auto;
-  width: 365px;
+  width: 370px;
   padding: 0px;
-  border: 1px solid black;
+  border: none;
   border-radius: 0px;
   background-color: #FFF;
 }
@@ -98,7 +98,7 @@ header {
   margin-left: 10px;
 }
 #Razer1 {
-  width: 365px;
+  width: 370px;
   height: 191px;
 }
 .choose-variant {
