--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 }
 .container {
   margin: 0 auto;
-  width: 370px;
+  width: 355px;
   padding: 0px;
   border: none;
   border-radius: 0px;
@@ -98,7 +98,7 @@ header {
   margin-left: 10px;
 }
 #Razer1 {
-  width: 370px;
+  width: 355px;
   height: 191px;
 }
 .choose-variant {
@@ -549,22 +549,12 @@ header {
 <br><br>
   </div>
 
+  <div class="similar-items">
+<p id="similar-items">Looking for similar items? There you go!</p>
+  </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  </div>
 
 
 
@@ -575,18 +565,6 @@ header {
 <br><br>
 
      </div>
-    
-  
-  <script>
-
-  localStorage.setItem("amount", "25")
-  var Amount = localStorage.getItem("amount")
-  var Amount1 = document.getElementById("amount1");
-
-  Amount1.textContent = `${Amount}`;
-
-
-  </script>
 
 
 </body>
