--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 }
 .container {
   margin: 0 auto;
-  width: 360px;
+  width: 100vw;
   padding: 0px;
   border: none;
   border-radius: 0px;
