--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <style>
 
+
+
+
 body {
    font-family: Arial, sans-serif;
    background-color: #fff;
@@ -18,12 +21,17 @@ body {
 }
 .container {
   margin: 0 auto;
-  width: 360px;
+  width: 355px;
   padding: 0px;
   border: none;
   border-radius: 0px;
   background-color: #FFF;
 }
+
+.dollar {
+  font-weight: bold;
+}
+
 header {
   display: flex;
   flex-direction: row;
@@ -98,7 +106,7 @@ header {
   margin-left: 10px;
 }
 #Razer1 {
-  width: 360px;
+  width: 355px;
   height: 191px;
 }
 .choose-variant {
@@ -321,7 +329,7 @@ header {
   font-size: 12px;
   font-weight: var(--bold-weight);
 }
-#desc-amount1, #desc-amount2, #desc-amount4 {
+#desc-amount1, #desc-amount2, #desc-amount4, #desc-amount5, #desc-amount6 {
   margin-top: 40px;
   margin-left: 5px;
   font-weight: 900;
@@ -397,14 +405,14 @@ header {
   margin-left: 10px;
   margin-top: 60px;
 }
-#old-price4, #old-price2, #old-price1 {
+#old-price4, #old-price2, #old-price1, #old-price5 {
   margin-top: -15px;
   margin-left: 10px;
   font-size: 13px;
   text-decoration: line-through;
   color: #8C8C8C;
 }
-#discount4, #discount2, #discount1 {
+#discount4, #discount2, #discount1, #discount5 {
   display: flex;
   margin-top: -10px;
   margin-left: 10px;
@@ -414,6 +422,209 @@ header {
   color: red;
   background-color: #FDECE5;
 }
+#similar-items {
+  margin-left: 5px;
+  font-size: 14px;
+  font-weight: 900;
+}
+.sellers-no1 {
+  display: flex;
+  flex-direction: row;
+}
+#sellers-19, #sellers-15 {
+  font-size: 11px;
+  color: #8C8C8C;
+}
+#sellers-15 {
+  margin-left: 35px;
+}
+#Razer5 {
+  margin-left: -2px;
+  width: 160px;
+  height: 210px;
+}
+.description5 {
+  margin-top: -3px;
+  margin-left: 0px;
+  width: 155px;
+  height: 170px;
+  border: 1px solid #8C8C8C;
+  background-color: #FFF;
+}
+#desc5 {
+  margin-top: 4px;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: var(--bold-weight);
+}
+#desc-amount5 {
+  margin-left: 10px;
+  margin-top: 40px;
+}
+#Razer6 {
+  margin-left: 18px;
+  width: 160px;
+  height: 210px;
+}
+.description6 {
+  margin-top: -3px;
+  margin-left: 20px;
+  width: 155px;
+  height: 170px;
+  border: 1px solid #8C8C8C;
+  background-color: #FFF;
+}
+#desc6 {
+  margin-top: 4px;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: var(--bold-weight);
+}
+#desc-amount6 {
+  margin-left: 10px;
+  margin-top: 90px;
+}
+.row-arrange1 {
+  display: flex;
+  flex-direction: row;
+}
+.article-inspired {
+  margin-top: -20px;
+  background-color: #F5F5F5;
+}
+#article-inspired {
+  margin-top: 20px;
+  text-align: center;
+}
+#more-article {
+  /*display: flex;
+  align-items: center;
+  justify-content: center;*/
+  margin-left: 12px;
+  width: 330px;
+  height: 33px;
+  border: none;
+  font-weight: bold;
+  border-radius: 8px;
+  color: #FFF;
+  background-color: #3181FC;
+}
+#Desert-Soldiers {
+  margin-top: 10px;
+  margin-left: 20px;
+  width: 310px;
+}
+#best-aaa-games {
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
+}
+#discover-your-guide {
+  padding-left: 25px;
+  padding-right: 15px;
+  font-size: 15px;  
+}
+#why-g2a {
+  text-align: center;
+}
+.vast-selection {
+  margin: 0 auto;
+  width: 320px;
+  border-radius: 10px;
+  border: 1px solid grey;
+}
+#vast-selection-img {
+  margin-top: 10px;
+  margin-left: 20px;
+  width: 40px;
+  height: 40px;
+}
+#vast-selection {
+  margin-top: -35px;
+  margin-left: 70px;
+  font-size: 17px;
+  font-weight: bold;
+}
+#over-75k{
+  text-align: center;
+  margin-top: -10px;
+  font-size: 14px;
+  color: grey;
+}
+#pages-in1 {
+  margin-top: -5px;
+  margin-left: 20px;
+  font-size: 13px;
+  color: var(--light-color);
+}
+#Acceptabl-Cards {
+  width: 330px;
+  height: 60px;
+}
+#bottom-p {
+  padding-left: 20px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #8C8C8C;
+}
+#bottom-p p {
+  margin-top: -5px;
+}
+.grey {
+  font-weight: 900;
+  color: #8C8C8C;
+}
+#b-p {
+  margin-top: 25px
+}
+.using-portal {
+  font-size: 13px;
+  padding-left: 20px;
+  color: #8C8C8C;
+}
+#using-portal {
+  font-weight: 100;
+}
+
+.menu {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 360px;
+  border: 1px solid #FFF;
+  background-color: #FFF;
+  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+#menu-amount {
+  margin-left: 25px;
+  font-size: 17px;
+  font-weight: 900;
+  color: #000;
+}
+#menu-button {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 7px;
+  width: 330px;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  font-weight: bold;
+  color: #FFF;
+  background-color: #3181FC;
+}
+
+
+
+
+
+
+
+
 
     </style>
     
@@ -510,21 +721,21 @@ header {
        <div class="descr1">
    <div class="description1">
 <p id="desc1">Razer Gold 25 USD - Razer Key - GLOBAL</p>
-<p id="desc-amount1">$ 25.45</p>
-<p id="old-price1">$ 48.20</p>
-<button id="discount1">-65%</button>
+<p id="desc-amount1"><span class="dollar">$</span> 25.45</p>
+<p id="old-price1"><span class="dollar">$</span> 38.20</p>
+<button id="discount1">-16%</button>
    </div>
    <div class="description2">
 <p id="desc2">Razer Gold 5 USD - Razer Key - GLOBAL</p>
-<p id="desc-amount2">$ 5.53</p>
-<p id="old-price2">$ 7.28</p>
-<button id="discount2">-72%</button>
+<p id="desc-amount2"><span class="dollar">$</span> 5.53</p>
+<p id="old-price2"><span class="dollar">$</span> 6.28</p>
+<button id="discount2">-12%</button>
    </div>
        </div>
 <br>
   <div class="your-price1">
 <p id="your-price1">YOUR PRICE</p>
-<h1 id="your-price2">$ 30.98</h1>
+<h1 id="your-price2"><span class="dollar">$</span> 30.98</h1>
 <button id="add-to-cart1">Add to cart</button>
 <br><br>
   </div>
@@ -542,30 +753,118 @@ header {
        <div class="descr4">
    <div class="description4">
 <p id="desc4">Razer Gold 25 USD - Razer Key - GLOBAL</p>
-<p id="desc-amount4">$ 25.45</p>
-<p id="old-price4">$ 27.70</p>
+<p id="desc-amount4"><span class="dollar">$</span> 25.45</p>
+<p id="old-price4"><span class="dollar">$</span> 27.70</p>
 <button id="discount4">-8%</button>
    </div>
-<br><br>
+<br>
   </div>
 
   <div class="similar-items">
 <p id="similar-items">Looking for similar items? There you go!</p>
   </div>
 
+  <div class="sellers-no1">
+<p id="sellers-19">OFFERS FROM 19 SELLERS</p>
+<p id="sellers-15">OFFERS FROM 15 SELLERS</p>
+  </div>
 
+       <div class="row-arrange1">
+  <div class="descr5">
+<img src="Images/Razer2.jpg" id="Razer5">
+    <div class="description5">
+ <p id="desc5">Razer Gold 25 USD - Razer Key - UNITED STATES</p>
+ <p id="desc-amount5"><span class="dollar">$</span> 48.88</p>
+ <p id="old-price5"><span class="dollar">$</span> 55.40</p>
+ <button id="discount5">-12%</button>
+    </div>
+ <br>
+   </div>
+
+  <div class="descr6">
+<img src="Images/Razer2.jpg" id="Razer6">
+    <div class="description6">
+ <p id="desc6">Razer Gold 5 USD - Razer Key - GLOBAL</p>
+ <p id="desc-amount6"><span class="dollar">$</span> 5.53</p>
+    </div>
+ <br>
+   </div>
+  </div>
+<hr>
+  </div>
+
+  <div class="article-inspired">
+  <hr style="margin-top: 10px; width: 330px;">
+<h2 id="article-inspired">Get inspired by our articles!</h2>
+<button id="more-article">More Guides</button>
+<img src="Images/Desert-Soldiers.jpg" id="Desert-Soldiers">
+<p id="best-aaa-games">Best AAA Games - Everything You Should Know About Triple A</p>
+<p id="discover-your-guide">Discover your ultimate guide to Triple A titles. Explore the biggest hits, hottest trends, and must-play games in the industry.</p>
+<br><br>
+  </div>
+
+<br><br>
+<h2 id="why-g2a">Why G2A?</h2>
+
+  <div class="vast-selection">
+<img src="Images/Vast-Selection.jpg" id="vast-selection-img">
+<p id="vast-selection">Vast Selection in best prices</p>
+<p id="over-75k">Over <span class="bold">75K</span> digital items</p>
+  </div>
+
+<br>
+<p id="pages-in1">G2A &nbsp;>&nbsp; Gaming &nbsp;>&nbsp; Gaming Gift Cards &nbsp;>&nbsp; Razer Gold</p>
+
+  <div class="right-en-usd">
+<hr>
+<img src="Images/Acceptabl-Cards.jpg" id="Acceptabl-Cards">
+<hr>
+  </div>
+
+<br>
+<hr style="width: 320px;">
+<br>
+
+  <div class="bottom">
+<div id="bottom-p">
+<p class="b-p"><span class="grey">G2A.COM Limited (platform operator)</span></p>
+<p class="b-p">Address: 31/F, Tower Two, Times Square, 1</p>
+<p class="b-p">Matheson Street</p>
+<p class="b-p">Causeway Bay, Hong Kong</p>
+<p class="b-p">Business registration number: 63264201</p>
+
+<p class="b-p"><span class="grey">G2A LLC (platform operator)</span></p>
+<p class="b-p">Address: 701 South Carson Street, Suite 200, Carson City,</p>
+<p class="b-p">Nevada 89701, USA</p>
+<p class="b-p">Business registration number: E0627762014-7</p>
+<p class="b-p"><span class="grey">G2A.COM Direct B.V. (platform support)</span></p>
+<p class="b-p">Addres: James Wattstraat 77 A 3, 1097DL Amsterdam,</p>
+<p class="b-p">the Netherlands</p>
+<p class="b-p">Business registration number: 89975561</p>
+</div>
+  </div>
+
+<br>
+
+  <div class="using-portal">
+<p id="using-portal">Using the G2A portal constitudes acceptance of the <span class="bold">Regulations</span>. Information about how we process your personal data you will find in the <span class="bold">Privacy and Cookie Policy</span>. Copyrights G2A Group. All rights reversed.</p>
+</div>
+
+<br><br>
+<br><br>
+<br><br>
+<br>
+
+  <div class="menu">
+<p id="menu-amount"><span class="dollar">$</span> 25.45</p>
+<button id="menu-button">Add to cart</button>
   </div>
 
 
 
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-
      </div>
-
+    
+   
 
 </body>
 </html>
