--- a/Cart.html
+++ b/Cart.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
   <meta property="og:title" content="Razer Gold - Cheap" />
-  <meta property="og:description" content="Razer Gold USD - Cheap - G2A" />
-  <meta name="description" content="Razer Gold USD - Cheap - G2A" />
+  <meta property="og:description" content="Buy gift cards for your favorite brands and services. Fast delivery, secure payments, and instant access to digital gift cards for gaming, shopping, entertainment, and more!" />
+  <meta name="description" content="Buy gift cards for your favorite brands and services. Fast delivery, secure payments, and instant access to digital gift cards for gaming, shopping, entertainment, and more!" />
   <meta property="og:url" content="https://bennyboy10.github.io/A-Square/" />
   <meta property="og:image" content="https://raw.githubusercontent.com/BennyBoy10/A-Square/main/Images/RazerGold.png" />
   <meta property="og:type" content="website" />
