--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ a {
   margin: 0 auto;
   width: 355px;
   padding: 0px;
-  border: 1px solid black;
+  border: none;
   border-radius: 0px;
   background-color: #FFF;
 }
