--- a/Payment/index.html
+++ b/Payment/index.html
@@ -21,6 +21,7 @@
 
 body {
   font-family: Arial, sans-serif;
+  background-color: #fff;
   background-color: #000;
   margin: 0;
   padding: 0;
@@ -304,7 +305,7 @@ button:hover {
 <body>
          <div class="container">
   <header>
-<a href="">
+<a href="../">
 <img src="Images/G2a-Logo.jpg" id="gta-logo">
 </a>
   </header>
@@ -430,7 +431,7 @@ window.addEventListener("DOMContentLoaded", function() {
 
   // Redirect if the amount is invalid (NaN)
   if (isNaN(amount2Text)) {
-    window.location.href = "index.html";
+    window.location.href = "../";
   }
 
   var Interest = null;
