--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@ submitButton.addEventListener('click', function() {
   var amount2Text = Amount2.textContent;
 
   // Redirect to Cart.html and pass the text content as a query parameter
-  window.location.href = 'Cart.html?amount2=' + encodeURIComponent(amount2Text);
+  window.location.href = '/Cart/?amount2=' + encodeURIComponent(amount2Text);
 });
 </script>
 
