--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta property="og:title" content="Razer Gold - Cheap" />
   <meta property="og:description" content="Buy gift cards for your favorite brands and services. Fast delivery, secure payments, and instant access to digital gift cards for gaming, shopping, entertainment, and more!" />
   <meta name="description" content="Buy gift cards for your favorite brands and services. Fast delivery, secure payments, and instant access to digital gift cards for gaming, shopping, entertainment, and more!" />
-  <meta property="og:url" content="https://bennyboy10.github.io/A-Square/" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/BennyBoy10/A-Square/main/Images/RazerGold.png" />
+  <meta property="og:url" content="https://g2a-giftcards.shop" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/BennyBoy10/Bank/main/Images/RazerGold.png" />
   <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="None">
